--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -71,10 +71,10 @@
     <li class="itemBox__cell itemBox__cell--flex3">
       <div class="itemBox__cellInner">
 
-        <div class="pmx-selector pmx-selector--expanded">
-          <div class="pmx-selector__item pmx-selector__item--selected">
-            <div class="pmx-selector__block">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
+        <div class="selector selector--expanded">
+          <div class="selector__item selector__item--selected">
+            <div class="selector__block">
+              <span class="selector__blockPart selector__blockPart--field">11/17/2017</span>
             </div>
           </div>
         </div>
@@ -102,10 +102,10 @@
     <li class="itemBox__cell itemBox__cell--flex3">
       <div class="itemBox__cellInner">
 
-        <div class="pmx-selector pmx-selector--expanded">
-          <div class="pmx-selector__item pmx-selector__item--selected">
-            <div class="pmx-selector__block">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--field">11/17/2017</span>
+        <div class="selector selector--expanded">
+          <div class="selector__item selector__item--selected">
+            <div class="selector__block">
+              <span class="selector__blockPart selector__blockPart--field">11/17/2017</span>
             </div>
           </div>
         </div>
@@ -173,32 +173,32 @@
       <li class="itemBox__cell itemBox__cell--flex3">
         <div class="itemBox__cellInner">
 
-          <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
-            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</div>
+          <div class="selector selector--expanded selector--multiselect JS_selector">
+            <div class="selector__item selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--field">UI/UX</div>
               </div>
             </div>
-            <div class="pmx-selector__itemSeperator"></div>
-            <div class="pmx-selector__item JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00bfff;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00bfff;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--field">Design</div>
               </div>
             </div>
-            <div class="pmx-selector__itemSeperator"></div>
-            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--field">Front-end</div>
               </div>
             </div>
-            <div class="pmx-selector__itemSeperator"></div>
-            <div class="pmx-selector__item JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--field">Important</div>
               </div>
             </div>
           </div>
@@ -223,40 +223,40 @@
         <li class="itemBox__cell itemBox__cell--flex3">
           <div class="itemBox__cellInner">
 
-            <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
-              <div class="pmx-selector__item  pmx-selector__item--selected JS_selectorItem">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">design</div>
-                  <div class="pmx-selector__blockSeperator"></div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</div>
+            <div class="selector selector--expanded selector--multiselect JS_selector">
+              <div class="selector__item  selector__item--selected JS_selectorItem">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--label">design</div>
+                  <div class="selector__blockSeperator"></div>
+                  <div class="selector__blockPart selector__blockPart--field">UI/UX</div>
                 </div>
               </div>
-              <div class="pmx-selector__itemSeperator"></div>
-              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: orange;">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">comp</div>
-                  <div class="pmx-selector__blockSeperator"></div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">IT</div>
+              <div class="selector__itemSeperator"></div>
+              <div class="selector__item selector__item--selected JS_selectorItem">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: orange;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--label">comp</div>
+                  <div class="selector__blockSeperator"></div>
+                  <div class="selector__blockPart selector__blockPart--field">IT</div>
                 </div>
               </div>
-              <div class="pmx-selector__itemSeperator"></div>
-              <div class="pmx-selector__item JS_selectorItem">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: blue;">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">dev</div>
-                  <div class="pmx-selector__blockSeperator"></div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Back-end</div>
+              <div class="selector__itemSeperator"></div>
+              <div class="selector__item JS_selectorItem">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: blue;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--label">dev</div>
+                  <div class="selector__blockSeperator"></div>
+                  <div class="selector__blockPart selector__blockPart--field">Back-end</div>
                 </div>
               </div>
-              <div class="pmx-selector__itemSeperator"></div>
-              <div class="pmx-selector__item JS_selectorItem">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">status</div>
-                  <div class="pmx-selector__blockSeperator"></div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</div>
+              <div class="selector__itemSeperator"></div>
+              <div class="selector__item JS_selectorItem">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--label">status</div>
+                  <div class="selector__blockSeperator"></div>
+                  <div class="selector__blockPart selector__blockPart--field">Important</div>
                 </div>
               </div>
             </div>
