--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -30,10 +30,10 @@
             <li class="itemBox__cell itemBox__cell--permalink">
               <div class="itemBox__cellInner ">
 
-                <div class="pmx-selector pmx-selector--readonly">
-                  <div class="pmx-selector__item">
-                    <div class="pmx-selector__block">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item}}</div>
+                <div class="selector selector--readonly">
+                  <div class="selector__item">
+                    <div class="selector__block">
+                      <div class="selector__blockPart selector__blockPart--field JS_text">{{item}}</div>
                     </div>
                   </div>
                 </div>
