--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -27,12 +27,12 @@
               <li class="itemBox__cell itemBox__cell--permalink">
                 <div class="itemBox__cellInner JS_text">
 
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--label">{{item.label}}</div>
-                        <div class="pmx-selector__blockSeperator"></div>
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field">{{item.name}}</div>
+                  <div class="selector selector--readonly">
+                    <div class="selector__item">
+                      <div class="selector__block">
+                        <div class="selector__blockPart selector__blockPart--label">{{item.label}}</div>
+                        <div class="selector__blockSeperator"></div>
+                        <div class="selector__blockPart selector__blockPart--field">{{item.name}}</div>
                       </div>
                     </div>
                   </div>
