--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="item-header__action">
-            <div class="selector selector--expanded JS_selector">
+            <div class="selector selector--expanded selector--required JS_selector">
               <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
                 <div class="selector__block">
                   <div class="selector__blockPart selector__blockPart--prefix"></div>
