Reorder: fixed functionality

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -68,7 +68,7 @@
               </div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
+          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--hidden">އ</div>
             </div>
@@ -96,7 +96,7 @@
               </div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
+          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--hidden">އ</div>
             </div>
@@ -147,7 +147,7 @@
                   </div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
+              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--hidden">އ</div>
                 </div>
@@ -176,7 +176,7 @@
                   </div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
+              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--hidden">އ</div>
                 </div>
