--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -33,7 +33,7 @@
                 <div class="itemBox__value">{{selected}}</div>
               </div>
             </li>
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--draggable">
               <div class="itemBox__cellInner">
                 <div class="itemBox__action itemBox__action--hidden">އ</div>
               </div>
