--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -47,7 +47,7 @@
                 </div>
               </div>
             </li>
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
+            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
               <div class="itemBox__cellInner">
                 <div class="itemBox__action itemBox__action--hidden">އ</div>
               </div>
