--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -66,7 +66,7 @@
                   </div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBox__cell--draggable ui-sortable-handle">
+              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--draggable ui-sortable-handle JS_itemBox__cell--draggable">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--drag">އ</div>
                 </div>
