--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -15,7 +15,7 @@
 
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--hidden">އ</div>
         </div>
