--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -2,7 +2,7 @@
   <li class="itemBox__cell ${textActionClass}">
     ${newSelectedItemHTML}
   </li>
-  <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+  <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--draggable">
     <div class="itemBox__cellInner">
       <i class="itemBox__action itemBox__action--hidden">އ</i>
     </div>
