--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -36,6 +36,22 @@
           &Inner {
             line-height: 50px;
           }
+
+           &--draggable {
+            .itemBox__cellInner {
+              color: #C79D54;
+              opacity: 0;
+              transition: all .3s ease-in-out;
+            }
+
+            &Placeholder {
+              position: relative;
+              width: 100%;
+              height: 40px;
+              background-color: #ffffff;
+              box-shadow: inset 0 0 50px rgba(0,0,0,.3);
+            }
+          }
         }
       }
     }
