--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -19,5 +19,6 @@
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
     <!-- OLD COMPONENTS -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-tab.js"></script>
   </body>
 </html>
