--- a/_includes/blocks/popup/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/popup/ms-tags-colors-color-sublist.html
@@ -4,15 +4,19 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner JS_itemBox__cellInner--color">
 
-          <div class="selector selector--readonly">
-            <div class="selector__item">
-              <div class="selector__block">
-                <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}">ग़</span>
+          <div class="itemBox__action">
+
+            <div class="selector selector--readonly">
+              <div class="selector__item">
+                <div class="selector__block">
+                  <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}">ग़</span>
+                </div>
               </div>
             </div>
-          </div>
 
-          {{item.name}}
+            <span>{{item.name}}</span>
+
+          </div>
 
         </div>
       </li>
