--- a/sass/app.scss
+++ b/sass/app.scss
@@ -74,5 +74,7 @@ textarea {
     color: #C1C1C1;
     font-weight: 300;
     font-style: italic;
+    text-transform: none;
+    font-size: 16px;
   }
 }
