--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -275,7 +275,7 @@
     &--focus {
       background-color: #FFF;
       box-shadow: 0 0 50px rgba(24, 74, 103, 0.4);
-      z-index: 1;
+      z-index: 2;
     }
   }
 
@@ -284,6 +284,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    min-height: 40px;
     height: 100%;
     padding: 5px 15px;
     line-height: 30px;
